# API_Wizards

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  search_tag.py
docs/: conf.py  custom.css
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 0e2b7d78a73a_coments.py  42c9833b9ea3_photos_and_users6.py  4bafe0f5cec3_init.py  598cf5a35a51_init.py  73816c8ea141_tags.py  79a9072a93af_comments.py  7f95056faa47_transformed_photo.py  b8ddc9fe7d52_coments.py  bb3b58f471bd_init.py  bdc7a0bb383e_size_of_photo_link.py  c1cac1f73630_init.py  d35ee28fdd70_test1.py  df005ebc3c31_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  16385  16388  16389  16392  16393  16397  16399  16407  16408  16411  16414  16416  16418  16419  16422  16423  16434  16439  16464  16466  16474  2224  2579  (+31 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  photos.py  roles.py  users.py
src/routes/: auth.py  comments.py  photos.py  user.py  user_option.py
src/schemas/: photos.py  schemas_auth.py  schemas_comments.py  user.py
src/services/: auth.py  comments.py  email.py  photos.py  roles.py
(+3 files in other folders)
