[tool.poetry]
name = "api_wizards"
version = "0.1.0"
description = ""
authors = ["Dmytro-Ostrenko <142011911+Dmytro-Ostrenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiopg = "^1.4.0"
python-multipart = "^0.0.6"
pydantic = { extras = ["email"], version = "^2.5.2" }
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
bcrypt = "4.0.1"
python-dotenv = "^1.0.0"
fastapi-mail = "^1.4.1"
email-validator = "^2.1.1"
redis = ">=4.0.0,<5.0.0"
fastapi-limiter = "^0.1.5"
jinja2 = "^3.1.2"
cloudinary = "^1.37.0"
pytest = "^7.4.3"
starlette = "==0.27.*"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
